--- a/css/global/global.css
+++ b/css/global/global.css
@@ -9,7 +9,14 @@ ul {
   padding: 0px;
 }
 
+li {
+  list-style: none;
+}
+
 h1,
+h2,
+h3,
+h4,
 ul,
 p {
   margin: 0px;
@@ -23,4 +30,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
