--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,11 +8,8 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
@@ -25,10 +22,8 @@
   padding: 16px 0px;
   display: inline-block;
   color: var(--cor-0);
-  font-size: 18px;
+
   position: relative;
-  font-family: "Poppins";
-  font-weight: 400;
 }
 
 .header-menu a::after {
@@ -52,7 +47,7 @@
   }
 
   .header-menu a {
-    background: var(--COR-11);
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
