--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@
 @import "./utilidades/cores.css";
 
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /*Utilidades */
 
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /*Home */
 @import "./home/introducao.css";
@@ -16,6 +18,20 @@
 
 /*Bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+
+/*Bicicleta*/
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 
 /*Seguros*/
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+
+/*Termos*/
+@import "./termos/termos.css";
+
+/*Contato*/
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
